2011-05-31 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Added a gnuplot call key to pgfmoduleplot.code.tex (feature
	request #3308340).

2011-05-30 Jannis Pohlmann <jannis@xfce.org>

	- graph drawing: 
	  - Initial work on layered drawing algorithms.

2011-05-25 Christophe Jorssen <cjorssen@users.sourceforge.net>

	- Added dim function for array to pgfmath (to be documented)
	- Some work on a ODE solver
	
2011-05-20 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- removed spurious white spaces in my bugfix for pgfmathdivide

2011-05-19 Till Tantau <tantau@users.sourceforge.net>

	- Second attempt at fixing spy lib...

2011-05-18 Matthias Schulz <ma.schulz@email.de>

	- graph drawing:
	  - added short overview for nodes and edges (lua class documentation)

2011-05-17 Jannis Pohlmann <jannis@xfce.org>

	- graph drawing:
	  - Separate 'spring layout' and 'spring electrical layout' families.
		  Rename existing algorithms accordingly.
	  - Add an implementation of the Floyd-Warshall algorithm.
	  - Add a new 'Hu2006 spring' algorithm based solely on springs.
	  - Improve the initial layout of 'Hu2006 spring electrical' by 
	    taking the graph size and diameter into account.
	  - Rework existing spring electrical algorithms and improve 
	    documentation.
	  - Catch -!- edges and remove them from the Lua graph when detected.

2011-05-14 Jannis Pohlmann <jannis@xfce.org>

	- graph drawing:
	  - Update documentation of spring and spring-electrical parameters.
	    Add TODO items where things are missing, unclear or need to be 
	    worked on.
	  - Make initial step dimension and the electric charge of nodes
	    configurable. Both, Walshaw2000 and Hu2006 support this.
	  - Improve the approximation of the repulsive force.

2011-05-13 Till Tantau <tantau@users.sourceforge.net>

	- Fixed bug 3297817 (spy postscript problem).
	- Fixed bug of missing newpath in postscript and opacity
	  settings. 
	
2011-05-13 Jannis Pohlmann <jannis@xfce.org>
